# TextArt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  draw.py  image.cpp  image.h  image.py  main.c  main.cc  main.cpp  utils.cpp  utils.h  video.cpp  video.h
apps/: CMakeLists.txt  main.cc  parse.h
include/draw/: draw.h  options.h
new_arch/: CMakeLists.txt  README.md
new_arch/example/: main.cc
new_arch/include/: colourspace.h  draw.h  options.h  utils.h
new_arch/src/: draw.cc  utils.cc
old/: CMakeLists.txt  image.cpp  main.cpp  utils.h
old/new_arch/include/: draw.h  options.h  transform.h
old/new_arch/include/colourspaces/: bash24.h  bash8.h  html.h
old/new_arch/src/: draw.cc
src/: CMakeLists.txt  draw.cc  toimg.sh  topage.sh
tests/: CMakeLists.txt  DrawPixelTest.cc  DrawTest.cc  OptionsTest.cc  ParseTest.cc  sunflowers.txt
